# ThesisAgent

./: .bandit  .gitignore  .readthedocs.yaml  AGENTS.md  CLAUDE.md  LICENSE  README.de.md  README.es.md  README.fr.md  README.hi.md  README.id.md  README.it.md  README.ja.md  README.ko.md  README.md  README.pt.md  README.ru.md  README.vi.md  README.zh-CN.md  README.zh-TW.md  pyproject.toml  requirements-dev.txt  requirements.txt  sonar-project.properties
.claude/agents/: compliance-auditor.md  deck-design.md  dod-verify.md  language-vocabulary-check.md  paper-summary-author.md  paper_rule.md  slide-deck-rules.md
.claude/agents/rules/: code-quality-reviewer.md  compliance-auditor.md  deck-design.md  env-vars.md  language-vocabulary-check.md  paper_rule.md  slide-deck-rules.md
.claude/agents/tasks/: dod-verify.md  paper-summary-author.md  post-author-audit.md  slide-overflow-check.md  thesis-deck-author.md
.github/workflows/: ci.yml  release.yml
assets/: README.md  generate_icon.py
autopapertoppt/: __init__.py  __main__.py  cli.py
autopapertoppt/core/: __init__.py  constants.py  dedup.py  exceptions.py  identifiers.py  models.py  oa_resolver.py  pdf_cookies.py  pdf_download.py  pipeline.py  query.py  ranking.py  top_venues.py
autopapertoppt/exporters/: __init__.py  base.py  bibtex.py  json_export.py  markdown.py  pptx.py  pptx_edit.py  xlsx.py
autopapertoppt/fetchers/: __init__.py  base.py  http.py  rate_limit.py  webrunner_browser.py  webrunner_pdf.py
autopapertoppt/gui/: __init__.py  app.py  i18n.py  main_window.py  workers.py
autopapertoppt/gui/models/: __init__.py  papers_table_model.py
autopapertoppt/gui/pages/: deck.py  enrich.py  (+3 more)
autopapertoppt/intelligence/: __init__.py  pdf.py  pdf_assets.py  summarise.py
autopapertoppt/mcp/: __init__.py  __main__.py  server.py
autopapertoppt/sources/: __init__.py
autopapertoppt/utils/: logging.py  path_safety.py
docs/: architecture.md  cli.md  conf.py  configuration.md  contributing.md  data_model.md  gui.md  index.rst  installation.md  mcp.md  packaging-nuitka.md  packaging-pyinstaller.md  pptx_editing.md  releases.md  requirements.txt  source_plugins.md  troubleshooting.md
docs/de/: index.rst
docs/en/: index.rst
docs/es/: index.rst
docs/fr/: index.rst
docs/hi/: index.rst
docs/id/: index.rst
docs/it/: index.rst
docs/ja/: index.rst
docs/ko/: index.rst
docs/pt/: index.rst
docs/ru/: index.rst
docs/vi/: index.rst
docs/zh-cn/: index.rst
docs/zh-tw/: index.rst
readmes/: README.de.md  README.es.md  README.fr.md  README.hi.md  README.id.md  README.it.md  README.ja.md  README.ko.md  README.pt.md  README.ru.md  README.vi.md  README.zh-CN.md  README.zh-TW.md
scripts/: _audit_dark_text.py  _dump_pdf_text.py  _extract_speculative_figures.py  _inspect_xlsx.py  _overflow_check.py  _pdf_downloaders.py  _update_readme_envvars.py  add_compact_pointers_tcse.py  apply_clarity_pass2_fang2026.py  apply_clarity_rule_fang2026.py  apply_paper_inserts_tcse.py  apply_paper_inserts_thesis.py  apply_paper_inserts_v31.py  apply_za_zb_gloss_and_semicolon_swap.py  build_tcse_v24.py  check_overflow.py  compress_tcse_for_6page.py  convert_fang2026_to_dark_mode.py  fix_cicd_future_frame_misclaim.py  llm_download_acm_pdf.py  llm_download_ieee_pdf.py  llm_download_pdfs.py  llm_download_springer_pdf.py  llm_driven_search.py  llm_parse_results.py  migrate_sources_into_package.py  regen_claude_code_zh_tw.py  regen_code_review_thesis.py  regen_fang2026.py  regen_ieee_thesis_style.py  regen_ling2026_agent_skills.py  regen_ling2026_agent_skills_zh_tw.py  regen_llm_code_review_zh_tw.py  regen_llm_security_batch.py  regen_llm_security_batch_zh_tw.py  regen_speculative_decoding_zh_tw.py  regen_thesis_demo.py  revert_tcse_inserts_to_compact.py  strip_thesis_refs_tcse.py
sources/arxiv/: parser.py
sources/crossref/: fetcher.py
sources/dblp/: fetcher.py  parser.py
sources/ieee/: __init__.py  fetcher.py  webrunner_backend.py
sources/openaire/: __init__.py
sources/openalex/: __init__.py
sources/pubmed/: __init__.py  fetcher.py  parser.py
sources/scholar/: __init__.py  fetcher.py  parser.py  webrunner_backend.py
sources/semantic_scholar/: fetcher.py  parser.py
tests/: conftest.py  test_agents_md.py  test_arxiv_fetcher.py  test_arxiv_parser.py  test_audit_dark_text.py  test_check_overflow.py  test_cli.py  test_dedup_ranking.py  test_exporters.py  test_https_only_transport.py  test_i18n.py  test_identifiers.py  test_intelligence.py  test_mcp_tools.py  test_models.py  test_oa_resolver.py  test_path_safety.py  test_pdf_download.py  test_pdf_metadata.py  test_pipeline.py  test_pptx_edit.py  test_query.py  test_rate_limit.py  test_review.py  test_top_venues.py  test_webrunner_pdf.py
tests/gui/: conftest.py  test_app_icon.py  test_cli_dispatch.py  test_deck_page.py  test_enrich_page.py  test_i18n.py  test_main_window.py  test_papers_table_model.py  test_responsive.py  test_search_page.py  test_settings_page.py
tests/sources/: _mock.py  test_acm.py  test_core.py  test_crossref.py  test_dblp.py  test_doaj.py  test_europepmc.py  test_hal.py  test_ieee.py  test_openaire.py  test_openalex.py  test_pubmed.py  test_scholar.py  test_semantic_scholar.py  test_springer.py
thesisagents/: __init__.py  __main__.py  cli.py
thesisagents/core/: __init__.py  constants.py  dedup.py  exceptions.py  identifiers.py  models.py  oa_resolver.py  pdf_cookies.py  pdf_download.py  pipeline.py  query.py  ranking.py  top_venues.py
thesisagents/exporters/: __init__.py  audit.py  base.py  bibtex.py  csljson.py  csv_export.py  i18n.py  json_export.py  markdown.py  overflow.py  pptx.py  pptx_edit.py  review.py  ris.py  xlsx.py
thesisagents/fetchers/: __init__.py  base.py  http.py  webrunner_browser.py  webrunner_pdf.py
thesisagents/gui/: __init__.py  app.py  i18n.py  main_window.py
thesisagents/intelligence/: __init__.py  pdf.py  pdf_assets.py  pdf_metadata.py  summarise.py
thesisagents/mcp/: __init__.py  __main__.py  server.py
thesisagents/sources/: __init__.py
thesisagents/utils/: __init__.py  logging.py  path_safety.py
(+101 files in other folders)
