[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thesisagents"
version = "0.1.14"
description = "Keyword-driven paper search assistant that exports slides, summaries, and BibTeX."
requires-python = ">=3.12"
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
authors = [{ name = "JeffreyChen" }]
keywords = [
    "academic",
    "papers",
    "arxiv",
    "powerpoint",
    "bibtex",
    "mcp",
    "thesis",
    "research",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Topic :: Office/Business",
    "Topic :: Text Processing :: Markup",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "defusedxml>=0.7",
    "python-pptx>=0.6.23",
    "openpyxl>=3.1",
    "bibtexparser>=1.4",
    "beautifulsoup4>=4.12",
    "lxml>=5.2",
    "markdown-it-py>=3.0",
    # Real-browser backend for the Google Scholar plugin. Default-on so
    # the out-of-box `pip install thesisagents` gets the captcha-resilient
    # Scholar path. Users who don't have Chrome on PATH automatically
    # fall through to the httpx scrape path with no breakage.
    "je_web_runner>=0.0.60",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "streamlit>=1.36",
]
mcp = [
    "mcp>=1.2",
]
intelligence = [
    "pypdf>=4.0",
    "anthropic>=0.40",
    "pymupdf>=1.24",
]
gui = [
    "PySide6>=6.7",
]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "pytest-qt>=4.4",
    "ruff>=0.5",
    "bandit>=1.7",
    "mcp>=1.2",
    "pypdf>=4.0",
    "anthropic>=0.40",
    "pymupdf>=1.24",
    "PySide6>=6.7",
]

[project.scripts]
thesisagents = "thesisagents.__main__:main"
thesisagents-mcp = "thesisagents.mcp.__main__:main"
thesisagents-gui = "thesisagents.gui.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["thesisagents*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E", "F", "W",
    "B",
    "I",
    "UP",
    "SIM",
    "S",
    "C90",
    "N",
    "RET",
]
ignore = [
    "S101",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S106", "S311"]
# One-shot dev / regen scripts under scripts/ have different ergonomics from
# production code:
#   E501  CJK prose lines exceed the 100-char cap.
#   C901  Mode-driven find/replace scripts are naturally branchy; decomposing
#         them would obscure the per-anchor logic.
#   N806  OOXML element names like `pPr` / `rPr` are domain identifiers from
#         the WordprocessingML schema; lowercasing them loses readability.
#   S112  `try / except / continue` is acceptable in best-effort dev loops.
#   S603  `subprocess` calls use list-form (no shell) on repo-internal paths
#         constructed from a fixed allowlist (e.g. `git mv sources/<name>`).
"scripts/**" = ["E501", "C901", "N806", "S112", "S603"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra"

[tool.bandit]
exclude_dirs = ["tests", ".venv", "build"]
skips = [
    # B101: assert is fine in test helpers we may share later.
]
